--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 <!-- Scroll to fifteen -->
 <section class="fifteen">
-  <div class="a"><h1>As you can see the universe is huge. In the end, we all will become parts of the universe many milliones of years into the future.  </h1></div>
+  <div class="a"><h1>As you can see space is huge. In the end, we all will become parts of the universe many milliones of years into the future.  </h1></div>
   <div class="a"><h1>I hope you enjoyed my small project as I have a deep fasination for space and these are some amazing photos taken over the span of many years.</h1></div>
   <BR></BR>
   <BR></BR>
