--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <BR></BR>
   <BR></BR>
   <div class="a"></div><h2>Created by Chance Bauer</h2>
-  <div class="a"></div><h3>2022</h3></section>
+  <div class="a"></div><h3>2022 and beyond</h3></section>
 </body>
 </html>
 
